add send email service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,8 @@ invalid.email=Invalid email.
 invalidNameSize=The name must be between 2 and 30 characters.
 invalidTokenSize=The token must be between 2 and 50 characters.
 invalidStatus=The status must be either 'INACTIVE' or 'ACTIVE'.
+invalidMessageSize=The message must be between 2 and 300 characters.
+invalidSubjectSize=The subject must be between 2 and 30 characters.
+invalidSenderNameSize=The sender name must be between 2 and 20 characters.
+invalidSenderEmailSize=The name must be between 2 and 30 characters.
+invalidHost=Invalid host.
