code improvements, bug fixs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 field.required=A value must be informed.
-invalid.email=Invalid email.
+invalidEmail=Invalid email.
 invalidNameSize=The name must be between 2 and 30 characters.
 invalidTokenSize=The token must be between 2 and 50 characters.
 invalidStatus=The status must be either 'INACTIVE' or 'ACTIVE'.
@@ -8,3 +8,4 @@ invalidSubjectSize=The subject must be between 2 and 30 characters.
 invalidSenderNameSize=The sender name must be between 2 and 20 characters.
 invalidSenderEmailSize=The name must be between 2 and 30 characters.
 invalidHost=Invalid host.
+clientNotFound=Client not found.
