integration test, crossdomain configuration, local development

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ invalidSenderNameSize=The sender name must be between 2 and 20 characters.
 invalidSenderEmailSize=The name must be between 2 and 30 characters.
 invalidHost=Invalid host.
 clientNotFound=Client not found.
+messageNotFound=Message not found.
+duplicatedToken=Duplicated token.
