--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,33 @@
+#
+#   CLIENT
+#
 field.required=A value must be informed.
+requiredEmail=The email is required.
 invalidEmail=Invalid email.
 invalidNameSize=The name must be between 2 and 30 characters.
+requiredName=The name is required.
 invalidTokenSize=The token must be between 2 and 50 characters.
+requiredToken=The token is required.
 invalidStatus=The status must be either 'INACTIVE' or 'ACTIVE'.
-invalidMessageSize=The message must be between 2 and 300 characters.
-invalidSubjectSize=The subject must be between 2 and 30 characters.
-invalidSenderNameSize=The sender name must be between 2 and 20 characters.
-invalidSenderEmailSize=The name must be between 2 and 30 characters.
+requiredHosts=The hosts is required.
 invalidHost=Invalid host.
+duplicatedToken=Duplicated token.
+requiredEmailRecipient=The email recipient is required.
+
+#
+#   MESSAGE
+#
+requiredMessage=The message is required.
+invalidMessageSize=The message must be between 2 and 300 characters.
+requiredSubject=The subject is required.
+invalidSubjectSize=The subject must be between 2 and 30 characters.
+requiredSenderName=The sender name is required.
+invalidSenderNameSize=The sender name must be between 2 and 20 characters.
+requiredSenderEmail=The sender email is required.
+invalidSenderEmailSize=The name must be between 2 and 30 characters.
+
+#
+#   GENERAL
+#
 clientNotFound=Client not found.
 messageNotFound=Message not found.
-duplicatedToken=Duplicated token.
