improve cors filter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,8 @@ requiredHosts=The hosts is required.
 invalidHost=Invalid host.
 duplicatedToken=Duplicated token.
 requiredEmailRecipient=The email recipient is required.
-
+accessNotAllowed=Access not allowed.
+missingHeader=Missing admin header.
 #
 #   MESSAGE
 #
