add report service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,4 @@ invalidSenderEmailSize=The name must be between 2 and 30 characters.
 #
 clientNotFound=Client not found.
 messageNotFound=Message not found.
+reportNotSent=Report not sent.
