add client attribute

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ invalidNameSize=The name must be between 2 and 30 characters.
 requiredName=The name is required.
 invalidTokenSize=The token must be between 2 and 50 characters.
 requiredToken=The token is required.
-invalidStatus=The status must be either 'INACTIVE' or 'ACTIVE'.
+invalidClientStatus=The status must be either 'INACTIVE' or 'ACTIVE'.
 requiredHosts=The hosts is required.
 invalidHost=Invalid host.
 duplicatedToken=Duplicated token.
