--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ duplicatedToken=Duplicated token.
 requiredEmailRecipient=The email recipient is required.
 accessNotAllowed=Access not allowed.
 missingHeader=Missing admin header.
+
 #
 #   MESSAGE
 #
@@ -33,3 +34,10 @@ invalidSenderEmailSize=The name must be between 2 and 30 characters.
 clientNotFound=Client not found.
 messageNotFound=Message not found.
 reportNotSent=Report not sent.
+
+#
+#   LOGIN
+#
+requiredLoginEmail=The email is required.
+invalidLoginEmail=Invalid email.
+requiredLoginPassword=The password is required.
