add new tests, implement search

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,7 @@ requiredSenderName=The sender name is required.
 invalidSenderNameSize=The sender name must be between 2 and 20 characters.
 requiredSenderEmail=The sender email is required.
 invalidSenderEmailSize=The name must be between 2 and 30 characters.
+invalidSearchParams=The search params are invalid.
 
 #
 #   GENERAL
